--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
       <version>30.0-jre</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.75</version>
+    </dependency>
   </dependencies>
 
   <build>
